timefold: add initial constraints